[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/menus/PauseScreen.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="Control"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.380392, 0.564706, 0.72549, 0.27451 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -39.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 190.0
margin_top = 102.0
margin_right = 450.0
margin_bottom = 338.0
custom_constants/separation = 15

[node name="Title" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 30.0
custom_colors/default_color = Color( 1, 1, 0, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave]PAUSED"
text = "PAUSED"
fit_content_height = true
scroll_active = false

[node name="Control" type="Control" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 260.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 32 )

[node name="Continue" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 260.0
margin_bottom = 130.0
rect_min_size = Vector2( 260, 0 )
text = "Continue Level"

[node name="Restart" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 260.0
margin_bottom = 183.0
rect_min_size = Vector2( 260, 0 )
text = "Restart Level"

[node name="Quit" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 260.0
margin_bottom = 236.0
rect_min_size = Vector2( 260, 0 )
text = "Save and Quit"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
